# my-school-menus

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml  python-package.yml
example/: generate_ics_files.py
my_school_menus/: __init__.py  api.py  calendar.py  msm_api.py  msm_calendar.py
src/my_school_menus/: api.py
tests/: test_api.py  test_calendar.py  test_msm_api.py  test_msm_calendar.py
